[package]
name = "downloads_sorter"
version = "0.1.0"
authors = ["Allen Davis-Swing <allen.davisswing@rutgers.edu>"]
license = "MIT"
description = "A tool to sort files"
homepage = "https://github.com/allends/downloads_sorter"
repository = "https://github.com/allends/downloads_sorter"
keywords = ["cli", "sort", "tool"]
categories = ["command-line-utilities"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fs_extra = "1.2.0"
infer = "0.3"
dirs = "4.0.0"
indicatif = "0.16.2"